# gasket

./: .gitignore  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
action/: action.yml
dataset/: candidates.tsv  collect.sh  collect2.sh  freeze_log.jsonl  frozen_manifest.jsonl  manifest.jsonl  repos_manifest.jsonl
docs/: CERTIFIED-RUN.md  FUSION.md  NON-INTERFERENCE.md
docs/non-interference/: THEOREM.md
examples/: certified_run_demo.py  fusion_demo.py  requirements.txt
examples/noninterference/: check_coupling_bound.py  check_noninterference.py
examples/workflows/: certifiable_graph.py
harness/: extract.py  freeze.py  mapper.py  metrics.py  run_experiment.py
results/: extraction.json  mapping.json  metrics.json  report.md  results.json
specs/001-experimento-cobertura-mapear/: plan.md  spec.md  tasks.md
specs/002-costwright-1-cli/: spec.md
specs/002-gasket-1-cli/: spec.md
specs/003-costwright-fusion-cartesian-cert/: plan.md  spec.md  tasks.md
specs/003-gasket-fusion-cartesian-cert/: plan.md  spec.md  tasks.md
specs/004-certified-agent-run/: plan.md  spec.md  tasks.md
src/costwright/: caps.py  cli.py  fusion.py  mapper.py  pack.py  report.py
src/gasket/: caps.py  cli.py  extract.py  fusion.py  mapper.py  pack.py  report.py
src/gasket_check.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
tests/: test_harness.py
tests_pkg/: test_certified_run_e2e.py  test_cli.py  test_conditional_analyses.py  test_fusion.py
