[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "costwright"
version = "0.1.0"
description = "Static budget certificates for LLM-agent workflows (LangGraph / CrewAI / OpenAI Agents SDK). Backed by a machine-checked (Lean 4) cost-soundness theorem."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Hernán Inverso" }]
keywords = ["llm", "agents", "budget", "static-analysis", "langgraph", "crewai", "cost"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]
# CERO dependencias runtime — stdlib only (spec 002 FR-003)
dependencies = []

[project.urls]
Homepage = "https://github.com/hernaninverso/costwright"
Paper = "https://github.com/hernaninverso/typed-resources"

[project.scripts]
costwright = "costwright.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
